# domain-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  cursor-plug.json  main.py  pyproject.toml
context/: AICONTEXT-TOBUILD.MD  agent-theory.md
