[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-mcp"
version = "0.1.0"
description = "MCP server for domain searching, WHOIS, DNS, and SSL certificate analysis"
requires-python = ">=3.8"
dependencies = [
    "anyio",
    "click",
    "mcp[cli]",
    "starlette",
    "uvicorn",
    "httpx",
    "dnspython",
    "beautifulsoup4",
    "lxml",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
domain-mcp = "main:main" 